--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,1 +1,35 @@
-{% extends "global/base.html" %}
+{% extends "global/base.html" %} 
+
+{% block content %}
+    <div class="responsive-table">
+    <table class="contacts-table">
+        <caption class="table-caption">
+        Contacts
+        </caption>
+
+        <thead>
+        <tr class="table-row table-row-header">
+            <th class="tableheader">ID</th>
+            <th class="tableheader">First Name</th>
+            <th class="tableheader">Last Name</th>
+            <th class="tableheader">Phone</th>
+            <th class="tableheader">Email</th>
+        </tr>
+        </thead>
+
+        <tbody>
+            {% for contact in contacts %}
+                <tr class="table-row">
+                    <td class="table-cel">
+                    <a href="{% url "contact:contact" contact.id %}" class="table-link"> {{contact.id}} </a>
+                    </td>
+                    <td class="table-cel">{{contact.first_name}}</td>
+                    <td class="table-cel">{{contact.last_name}}</td>
+                    <td class="table-cel">{{contact.phone}}</td>
+                    <td class="table-cel">{{contact.email}}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    </div>
+{% endblock content %}
