--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,6 +1,7 @@
 {% extends "global/base.html" %} 
 
 {% block content %}
+{% if page_obj %}
     <div class="responsive-table">
     <table class="contacts-table">
         <caption class="table-caption">
@@ -18,7 +19,7 @@
         </thead>
 
         <tbody>
-            {% for contact in contacts %}
+            {% for contact in page_obj %}
                 <tr class="table-row">
                     <td class="table-cel">
                     <a href="{% url "contact:contact" contact.id %}" class="table-link"> {{contact.id}} </a>
@@ -32,4 +33,11 @@
         </tbody>
     </table>
     </div>
+{% else %}
+<div class="single-contact">
+    <h1 class="single-contact-name">
+        Nenhum Contato Encontrado
+    </h1>
+</div>
+{% endif %}
 {% endblock content %}
