--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -305,6 +305,26 @@ svg {
     transition: filter var(--transition-fast) ease-in-out;
 }
 
+.contact-links {
+    margin-block: calc(var(--small-font-size) * 2);
+    display: flex;
+    align-items: center;
+    gap: 0 var(--spacing);
+}
+
+.btn-link {
+    font-size: var(--small-font-size);
+    text-decoration: none;
+    font-weight: bold;
+    padding: 1rem;
+    display: block;
+    line-height: var(--small-font-size);
+}
+
+.btn-delete {
+    background: tomato;
+}
+
 .btn:hover {
     filter: brightness(90%);
 }
