--- a/base_templates/global/partials/_header.html
+++ b/base_templates/global/partials/_header.html
@@ -1,28 +1,31 @@
 <header class="header">
   <h1 class="header-heading">
-    <a class="header-link" href="{% url 'contact:index' %}">
-      Agenda
-    </a>
+    <a class="header-link" href="{% url 'contact:index' %}"> Agenda </a>
   </h1>
 
   <nav class="menu">
     <ul class="menu-list">
       <li class="menu-item">
-        <a href="" class="menu-link">
-          Link1
+        <a href="{% url 'contact:create' %}" class="menu-link">
+          Criar Contato
         </a>
       </li>
       <li class="menu-item">
-        <a href="" class="menu-link">
-          Link2
-        </a>
+        <a href="" class="menu-link"> Link2 </a>
       </li>
     </ul>
   </nav>
 
   <div class="search">
-    <form action="{% url "contact:search" %}" method="GET">
-      <input type="search" name="q" id="search" placeholder="Search" class="search-input" value="{{request.GET.q.strip}}">
+    <form action="{% url 'contact:search' %}" method="GET">
+      <input
+        type="search"
+        name="q"
+        id="search"
+        placeholder="Search"
+        class="search-input"
+        value="{{request.GET.q.strip}}"
+      />
     </form>
   </div>
 </header>
