--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -12,5 +12,22 @@
         <p><b>Created Date:</b> {{contact.created_date}}</p>
         <p><b>Description:</b> {{contact.description}}</p>
         <p><b>Category:</b> {{contact.category.name}}</p>
+
+        <div class="contact-links">
+            <a class="btn btn-link" href="{% url 'contact:update' contact.id %}">Update</a>
+            <form action="{% url 'contact:delete' contact.id %}" method="POST">
+                {% csrf_token %}
+
+                {% if confirmation == 'no' %}
+                    <input type="hidden" name="confirmation" value="yes">
+                    <button type="submit" class="btn btn-link btn-delete">Confirma?</button>
+                {% else %}
+                    <button type="submit" class="btn btn-link btn-delete">Delete</button>
+                {% endif %}
+                
+            </form>
+        </div>
+
+
     </div>
 {% endblock content %}
