--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -1,33 +1,36 @@
-{% extends "global/base.html" %}
+{% extends "global/base.html" %} {% block content %}
+<div class="single-contact">
+  <h1 class="single-contact-name">
+    {{contact.first_name}} {{contact.last_name}}
+  </h1>
 
-{% block content %}
-    <div class="single-contact">
-        <h1 class="single-contact-name">
-            {{contact.first_name}} {{contact.last_name}}
-        </h1>
+  <p><b>ID:</b> {{contact.id}}</p>
+  <p><b>E-mail:</b> {{contact.email}}</p>
+  <p><b>Phone:</b> {{contact.phone}}</p>
+  <p><b>Created Date:</b> {{contact.created_date}}</p>
+  <p><b>Description:</b> {{contact.description}}</p>
+  <p><b>Category:</b> {{contact.category.name}}</p>
+  {% if contact.picture %}
+  <p>
+    <img
+      src="{{ contact.picture.url }}"
+      alt="{{ contact.first_name }} {{ contact.last_name }}"
+    />
+  </p>
+  {% endif %}
 
-        <p><b>ID:</b> {{contact.id}}</p>
-        <p><b>E-mail:</b> {{contact.email}}</p>
-        <p><b>Phone:</b> {{contact.phone}}</p>
-        <p><b>Created Date:</b> {{contact.created_date}}</p>
-        <p><b>Description:</b> {{contact.description}}</p>
-        <p><b>Category:</b> {{contact.category.name}}</p>
-
-        <div class="contact-links">
-            <a class="btn btn-link" href="{% url 'contact:update' contact.id %}">Update</a>
-            <form action="{% url 'contact:delete' contact.id %}" method="POST">
-                {% csrf_token %}
-
-                {% if confirmation == 'no' %}
-                    <input type="hidden" name="confirmation" value="yes">
-                    <button type="submit" class="btn btn-link btn-delete">Confirma?</button>
-                {% else %}
-                    <button type="submit" class="btn btn-link btn-delete">Delete</button>
-                {% endif %}
-                
-            </form>
-        </div>
-
-
-    </div>
+  <div class="contact-links">
+    <a class="btn btn-link" href="{% url 'contact:update' contact.id %}"
+      >Update</a
+    >
+    <form action="{% url 'contact:delete' contact.id %}" method="POST">
+      {% csrf_token %} {% if confirmation == 'no' %}
+      <input type="hidden" name="confirmation" value="yes" />
+      <button type="submit" class="btn btn-link btn-delete">Confirma?</button>
+      {% else %}
+      <button type="submit" class="btn btn-link btn-delete">Delete</button>
+      {% endif %}
+    </form>
+  </div>
+</div>
 {% endblock content %}
