--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -22,6 +22,12 @@
             <p class="help_text">{{ field.help_text }}</p>
           {% endif %}
         </div>
+
+        {% if field.name == "picture" and field.value.url %}
+          <div class="form-group">
+            <img src="{{ field.value.url }}" alt="">
+          </div>
+        {% endif %}
       {% endfor %}
     </div>
      {% if form.non_field_errors %}
