--- a/contact/templates/contact/login.html
+++ b/contact/templates/contact/login.html
@@ -1,7 +1,7 @@
 {% extends "global/base.html" %} 
 {% block content %}
   <div class="form-wrapper">
-    <h2>Register</h2>
+    <h2>Login</h2>
     {% include "contact/partials/_user-form.html" %}
   </div>
 {% endblock content %}
