--- a/contact/templates/contact/login.html
+++ b/contact/templates/contact/login.html
@@ -1,7 +1,14 @@
 {% extends "global/base.html" %} 
+
 {% block content %}
   <div class="form-wrapper">
+
     <h2>Login</h2>
-    {% include "contact/partials/_user-form.html" %}
+
+    {% if user.is_authenticated %}
+      <p>Você fez login como {{ user.username }}. Clique <a href="{% url "contact:logout" %}">aqui</a> para sair.</p>
+    {% else %}
+      {% include "contact/partials/_user-form.html" %}
+    {% endif %}
   </div>
 {% endblock content %}
