changing the title

--- a/base_templates/global/partials/_header.html
+++ b/base_templates/global/partials/_header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <h1 class="header-heading">
-    <a class="header-link" href="{% url 'contact:index' %}"> Schedule</a>
+    <a class="header-link" href="{% url 'contact:index' %}"> Agenda</a>
   </h1>
 
   <nav class="menu">
