add a description line break

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -4,12 +4,12 @@
       {{contact.first_name}} {{contact.last_name}}
     </h1>
 
-    <p><b>ID:</b> {{contact.id}}</p>
-    <p><b>E-mail:</b> {{contact.email}}</p>
-    <p><b>Phone:</b> {{contact.phone}}</p>
-    <p><b>Created Date:</b> {{contact.created_date}}</p>
-    <p><b>Description:</b> {{contact.description}}</p>
-    <p><b>Category:</b> {{contact.category.name}}</p>
+    <p><b>ID:</b> {{ contact.id }}</p>
+    <p><b>E-mail:</b> {{ contact.email }}</p>
+    <p><b>Phone:</b> {{ contact.phone }}</p>
+    <p><b>Created Date:</b> {{ contact.created_date }}</p>
+    <p><b>Description:</b> {{ contact.description|linebreaksbr }}</p>
+    <p><b>Category:</b> {{ contact.category.name }}</p>
 
     {% if contact.picture %}
       <p>
